--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <form>
+      <label htmlFor="fileInput">Choose an Excel File:</label>
+      <input id="fileInput" type="file" accept=".xlsx, .xls" />
+  </form>
   </body>
 </html>
